# Thread-Pool-Cpp

./: CMakeLists.txt
CMake/: BuildOptions.cmake  CompilerFlags.cmake  Options.cmake  TPLConfig.cmake.in
Examples/: 01-BasicUsage.cpp  01-Main.cpp  01-SubmitBackgroundJobs.cpp  02-RequestStop.cpp  03-CustomStatus.cpp  CMakeLists.txt
Include/: CMakeLists.txt
Include/TPL/: Base.hpp  ContractManager.hpp  JobContract.hpp  TPL.hpp  ThreadPool.hpp  Utility.hpp  Worker.hpp  WorkerManager.hpp
Include/Ushi/: Base.hpp  ContractManager.hpp  JobContract.hpp  Ushi.hpp  Worker.hpp  WorkerManager.hpp
Source/: Base.hpp  CMakeLists.txt
Source/Ushi/Thread/: CMakeLists.txt  ContractManager.cpp  ContractManager.hpp  JobContract.hpp  ThreadPool.cpp  ThreadPool.hpp  Worker.hpp  WorkerManager.cpp  WorkerManager.hpp
Tests/: CMakeLists.txt
